add some title and description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="css/login.css"/>
-		<title></title>
+		<title>你的现金流管家</title>
+		<meta id="metaDescription" name="description" content="丰富的可视化报表，科学的统计方式，便捷的操作，你的不二之选" />
+
 	</head>
 	<body>
 		
