--- a/mother1/index.html
+++ b/mother1/index.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title></title>
+		<title>loveyou</title>
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+		
 	</head>
 	<body>
-		
+		<script src="bundle.js" type="text/javascript" charset="utf-8"></script>
+		<h>文章标题</h>
+		<img src="img/1.png" alt="" />
+		<p>dkfdfkdfkdfdlkfdlfkdjlfdjfldkjfdlfjdlfkjfdlfj</p>
 	</body>
 </html>
