--- a/mother1/index.html
+++ b/mother1/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<script src="bundle.js" type="text/javascript" charset="utf-8"></script>
 		<h>文章标题</h>
-		<img src="img/1.png" alt="" />
+		<img />
 		<p>dkfdfkdfkdfdlkfdlfkdjlfdjfldkjfdlfjdlfkjfdlfj</p>
 	</body>
 </html>
