--- a/mother1/index.html
+++ b/mother1/index.html
@@ -3,12 +3,13 @@
 		<title>loveyou</title>
 		<meta charset="UTF-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		
+		<meta name="Description" content="宝宝一定会好起来的"/>
 	</head>
 	<body>
 		<script src="bundle.js" type="text/javascript" charset="utf-8"></script>
 		<h>文章标题</h>
-		<img />
+		<img id="bg"/>
+		<img src="img/1.png" alt="" />
 		<p>dkfdfkdfkdfdlkfdlfkdjlfdjfldkjfdlfjdlfkjfdlfj</p>
 	</body>
 </html>
