--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<div class="chooseBox">
 			<ul class="btn_choose">
 				<li class="cashFlowBox"><a href="cashFlow.html" title="现金流管理"></a></li
-				><li class = "onlineMap"><a href="./重庆市终端地图/重庆市终端地图.html" title = "在线地图"></a></li
+				><li class = "onlineMap"><a href="maponline/index.html" title = "在线地图"></a></li
 				><li><a href=""></a></li
 				><li><a href=""></a></li
 				><li><a href=""></a></li
